<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/quick_settings_background"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:minWidth="250dp"
            android:layout_marginStart="5dp">
            <de.shadow578.yetanothervideoplayer.ui.playback.views.ControlQuickSettingsButton
                android:id="@+id/qs_btn_cast"
                android:visibility="gone"
                app:icon="@drawable/ic_cast_black_24dp"
                app:text="@string/quick_settings_cast"
                style="@style/QuickSettingsButton"/>
            <de.shadow578.yetanothervideoplayer.ui.playback.views.ControlQuickSettingsButton
                android:id="@+id/qs_btn_pip"
                app:icon="@drawable/ic_picture_in_picture_black_24dp"
                app:text="@string/quick_settings_picture_in_picture"
                style="@style/QuickSettingsButton"/>
            <de.shadow578.yetanothervideoplayer.ui.playback.views.ControlQuickSettingsButton
                android:id="@+id/qs_btn_quality"
                app:icon="@drawable/ic_high_quality_black_24dp"
                app:text="@string/quick_settings_quality"
                style="@style/QuickSettingsButton"/>
            <de.shadow578.yetanothervideoplayer.ui.playback.views.ControlQuickSettingsButton
                android:id="@+id/qs_btn_captions"
                android:visibility="gone"
                app:icon="@drawable/ic_closed_caption_black_24dp"
                app:text="@string/quick_settings_subs"
                style="@style/QuickSettingsButton"/>
            <de.shadow578.yetanothervideoplayer.ui.playback.views.ControlQuickSettingsButton
                android:id="@+id/qs_btn_jump_to"
                app:icon="@drawable/ic_jump_to_black_48dp"
                app:text="@string/quick_settings_jump_to"
                style="@style/QuickSettingsButton"/>
            <de.shadow578.yetanothervideoplayer.ui.playback.views.ControlQuickSettingsButton
                android:id="@+id/qs_btn_repeat_tgl"
                app:icon="@drawable/ic_repeat_black_24dp"
                app:text="@string/quick_settings_loop"
                style="@style/QuickSettingsButton"/>
            <de.shadow578.yetanothervideoplayer.ui.playback.views.ControlQuickSettingsButton
                android:id="@+id/qs_btn_skip_intro"
                app:icon="@drawable/ic_fast_forward_black_24dp"
                app:text="@string/quick_settings_skip_intro"
                style="@style/QuickSettingsButton"/>
            <de.shadow578.yetanothervideoplayer.ui.playback.views.ControlQuickSettingsButton
                android:id="@+id/qs_btn_app_settings"
                app:icon="@drawable/ic_settings_black_24dp"
                app:text="@string/quick_settings_app_settings"
                style="@style/QuickSettingsButton"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
