<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/app_background_base"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/app_text_dark"
        android:id="@+id/more_app_name"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/more_app_icon"/>
    <ImageView
        android:id="@+id/more_app_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/more_card_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/app_background_elevated"
            app:cardCornerRadius="2dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/more_btn_debug"
                    android:text="@string/more_open_debug"
                    android:drawableStart="@drawable/ic_placeholder_black_24dp"
                    style="@style/MoreActionButton"/>
                <Button
                    android:id="@+id/more_btn_update_check"
                    android:text="@string/more_check_for_updates"
                    android:drawableStart="@drawable/ic_update_black_24dp"
                    style="@style/MoreActionButton"/>
                <Button
                    android:id="@+id/more_btn_settings"
                    android:text="@string/more_open_settings"
                    android:drawableStart="@drawable/ic_settings_black_24dp"
                    style="@style/MoreActionButton"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/more_card_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/app_background_elevated"
            app:cardCornerRadius="2dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/more_btn_donate"
                    android:visibility="gone"
                    android:text="@string/more_donate"
                    android:drawableStart="@drawable/ic_free_breakfast_black_24dp"
                    style="@style/MoreActionButton"/>
                <Button
                    android:id="@+id/more_btn_about"
                    android:text="@string/more_about"
                    android:drawableStart="@drawable/ic_info_outline_black_24dp"
                    style="@style/MoreActionButton"/>
                <Button
                    android:id="@+id/more_btn_help"
                    android:text="@string/more_help"
                    android:drawableStart="@drawable/ic_help_outline_black_24dp"
                    style="@style/MoreActionButton"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
