<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:visibility="gone"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_app_crash_256"
            android:contentDescription="@null"/>
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/crash_text_error"/>
        <Button
            android:id="@+id/crashac_btn_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/crash_resume_playback"
            android:onClick="crashac_OnClick"/>
        <Button
            android:id="@+id/crashac_btn_close_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crash_exit_app"
            android:onClick="crashac_OnClick"/>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/crashac_txt_crash_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CRASH_DETAILS"
                android:textIsSelectable="true"/>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
