<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/app_background_base"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mediapicker_media_previews_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/mediapicker_no_permissions_container"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:textSize="14sp"
                android:textColor="@color/app_text_dark"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:maxWidth="200dp"
                android:text="@string/mediapicker_frag_no_permissions"/>
            <Button
                android:id="@+id/mediapicker_request_permissions_btn"
                android:background="@color/app_background_elevated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/mediapicker_frag_no_permissions_btn"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/mediapicker_no_media_container"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_shrug_black_48dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/mediapicker_no_media"/>
            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/app_text_dark"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mediapicker_no_media"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
